feat: Implement Smart Upload API with comprehensive tests
- Added Smart Upload API route for handling PDF uploads, including metadata extraction and verification using LLMs.
- Implemented rate limiting for uploads to prevent abuse.
- Created unit tests for the Smart Upload API covering authentication, file validation, CSRF checks, successful uploads, and error handling.
- Updated environment variables for LLM configuration.
- Refactored permission constants to ensure proper access control for music uploads.
- Enhanced email template form with additional template types.
- Adjusted database schema and service methods to align with new requirements.

--- a/env.example
+++ b/env.example
@@ -174,3 +174,13 @@ SCHEDULER_INTERVAL_MS="60000"
 CLEANUP_INTERVAL_MS="86400000"
 # [Required: No] Enable background worker (true/false)
 ENABLE_WORKER="true"
+
+# ------------------------------------------------------------------------------
+# LLM CONFIGURATION (Smart Upload)
+# ------------------------------------------------------------------------------
+# [Required: No] Ollama endpoint for LLM API
+LLM_OLLAMA_ENDPOINT="http://localhost:11434"
+# [Required: No] Vision model for first pass metadata extraction (e.g., llama3.2-vision)
+LLM_VISION_MODEL="llama3.2-vision"
+# [Required: No] Verification model for second pass validation (e.g., qwen2.5:7b, llama3:8b)
+LLM_VERIFICATION_MODEL="qwen2.5:7b"
