--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "tailwindcss": "^4",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
+    "typescript-eslint": "^8.56.0",
     "vitest": "^4.0.18"
   },
   "overrides": {
